  * checks/obsolete-sites.{desc,pm}:
    + [AB] New check with tag obsolete-url-in-packaging to check for URLs
      of hosting sites with frozen contents or (soon to be) closed hosting
      sites (Google Code, Gitorious, Freshmeat, etc.) inside the
      packaging.  (Closes: #793503)
  * checks/scripts.pm:
    + [BR] Fix Unescaped left brace in regex.  (Closes: #788926)
  * checks/testsuite.pm:
    + [AB] Split up restrictions, features and tests by comma as well as
      space. (Closes: #798359, #792418)
  * checks/version-substvars.pm:
    + [BR] Fix Unescaped left brace in regex is deprecated line 68.
  * checks/watch.desc:
    + [BR] Upgrade upstream PGP keys location.  (Closes: #796311)

  * data/binaries/embedded-libs:
    + [RG] Add another matching string for libidn
  * data/common/source-fields:
    + [AB] Add patch by Tianon Gravi to add go-import-path as known source
      field. (Closes: #798422)
  * data/fields/archive-sections:
    + [NT] Remove the "debugsym" section as "ddebs" will be put in
      the regular "debug" section.
  * data/fields/binary-fields:
    + [NT] Accept the "Build-Ids" field, which debhelper will start to
      include in debug packages.
  * data/scripts/maintainer-script-bad-command:
    + [AB] Fix maintainer-script-should-not-use-adduser-system-without-home
      false positive in cases where --system and --home are ordered
      differently than initially expected. (Closes: #797395)
  * data/spelling/corrections:
    + [JW] Add correction for "bellow". (This is an actual English word,
      but in technical texts, it's almost certainly a misspelling of
      "below".)
    + [JW] Add correction for "positve".

  * debian/control:
    + [AB] Update Vcs-Browser header to use https and cgit.

  * lib/Lintian/{Tags.pm,Tag/Override.pm}:
    + [BR] Support tag renaming. Warn about renamed
      tags.

  * t/runtests:
    + [BR] Apply patch from Chris Lamb improving documentation.
      (Closes:  #796822).