@@ -110,14 +110,14 @@ Tag: preinst-calls-ldconfig
 Severity: normal
 Certainty: certain
 Info: The preinst script calls ldconfig.  Calls to ldconfig should only be
- in postinst and postrm scripts.
+ in postinst and postrm scripts (or via a noawait trigger).
 Ref: policy 8.1.1
 
 Tag: prerm-calls-ldconfig
 Severity: normal
 Certainty: certain
 Info: The prerm script calls ldconfig.  Calls to ldconfig should only
- be in postinst and postrm scripts.
+ be in postinst and postrm scripts (or via a noawait trigger).
 Ref: policy 8.1.1
 
 Tag: postrm-unsafe-ldconfig
@@ -214,8 +214,12 @@ Ref: policy 8.1.1, #204975
 Tag: udeb-postinst-must-not-call-ldconfig
 Severity: important
 Certainty: certain
-Info: The postinst script calls ldconfig, which is an error in udebs.
- ldconfig is not available and not needed in debian-installer
+Info: The udeb invokes ldconfig on install, which is an error in udebs.
+ .
+ ldconfig is not available and not needed in debian-installer.
+ .
+ Note that this tag may (despite what the name suggests) be issued if
+ the udeb uses a dpkg trigger to invoke ldconfig.
 
 Tag: postrm-has-useless-call-to-ldconfig
 Severity: minor
@@ -225,6 +229,9 @@ Info: The postrm script calls ldconfig even though no shared libraries are
  .
  Note this may be triggered by a bug in debhelper, that causes it to
  auto-generate an ldconfig snippet for packages that does not need it.
+ .
+ This tag may (despite what the name suggests) be issued if the package
+ uses a dpkg trigger.
 Ref: policy 8.1.1, #204975
 
 Tag: postinst-must-call-ldconfig
@@ -232,15 +239,23 @@ Severity: serious
 Certainty: certain
 Info: The package installs shared libraries in a directory controlled by
  the dynamic library loader. Therefore, the package must call "ldconfig" in
- its postinst script.
+ during installation.
+ .
+ This should either be done via a <tt>activate-noawait ldconfig</tt>
+ trigger or by calling "ldconfig" directly in the postinst script on
+ the "configure" step.
 Ref: policy 8.1.1
 
 Tag: postrm-should-call-ldconfig
 Severity: important
 Certainty: certain
 Info: The package installs shared libraries in a directory controlled by
- the dynamic library loader. Therefore, the package should call "ldconfig"
- in its postrm script.
+ the dynamic library loader. Therefore, the package must call "ldconfig" in
+ during removal.
+ .
+ This should either be done via a <tt>activate-noawait ldconfig</tt>
+ trigger or by calling "ldconfig" directly in the postrm script on
+ the "remove" step.
 Ref: policy 8.1.1
 
 Tag: sharedobject-in-library-directory-missing-soname
