@@ -49,6 +49,9 @@ lintian (2.5.37) UNRELEASED; urgency=medium
       packaging.  (Closes: #793503)
   * checks/scripts.pm:
     + [BR] Fix Unescaped left brace in regex.  (Closes: #788926)
+  * checks/shared-libs.{desc,pm}:
+    + [NT] Accept an "activate-noawait ldconfig" trigger instead of
+      explicit calls to "ldconfig".
   * checks/testsuite.pm:
     + [AB] Split up restrictions, features and tests by comma as well as
       space. (Closes: #798359, #792418)
